<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">



    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_os"
        android:title="@string/title_os" />

    <item
        android:id="@+id/navigation_clientes"
        android:icon="@drawable/ic_clientes"
        android:title="@string/title_clientes" />

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_agenda"
        android:icon="@drawable/ic_agenda"
        android:title="@string/title_agenda" />
    <item
        android:id="@+id/navigation_infos"
        android:icon="@drawable/ic_infos"
        android:title="@string/title_infos" />

</menu>