<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.menu_barrainferior.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_clientes"
        android:name="com.example.menu_barrainferior.ui.clientes.ClientesFragment"
        android:label="@string/title_clientes"
        tools:layout="@layout/fragment_clientes" />

    <fragment
        android:id="@+id/navigation_agenda"
        android:name="com.example.menu_barrainferior.ui.agenda.AgendaFragment"
        android:label="@string/title_agenda"
        tools:layout="@layout/fragment_agenda" />

    <fragment
        android:id="@+id/navigation_infos"
        android:name="com.example.menu_barrainferior.ui.infos.InfosFragment"
        android:label="@string/title_infos"
        tools:layout="@layout/fragment_infos" />

    <fragment
        android:id="@+id/navigation_os"
        android:name="com.example.menu_barrainferior.ui.os.OsFragment"
        android:label="@string/title_os"
        tools:layout="@layout/fragment_os" />
</navigation>